- do not try to configure dvd devices since /dev is wiped out at reboot
- allow umounting cdrom during a transaction
- really allow having name with "/" in media.cfg

Version 10.4.129 - 4 April 2007, by Pascal "Pixel" Rigaux

- move advertising out of drakx-installer-stage2 into drakx-installer-advertising

Version 10.4.128 - 3 April 2007, by Pascal "Pixel" Rigaux

- don't configure /etc/kde/kdm/kdmrc if it doesn't exist
  (other kdmrc.rpmnew will be created, many important values will be missing)
- fix ext3 formatting with label and progress bar (#30032)
- fix taking screenshot
- prefering libkdebase4-kmenuedit over libkdebase46-kmenuedit to ensure
  kdebase-kmenuedit is chosen instead of kdebase4-kmenuedit

Version 10.4.126 - 29 March 2007, by Olivier "blino" Blin

- use pci_domain when matching sysfs device and computing
  sysfs device path

Version 10.4.124 - 29 March 2007, by Olivier "blino" Blin

- correctly mark "update" media in urpmi.cfg
- fix multiple detection of PCI network cards with the same driver (#29688)
- rename o->{build_live_system} as more generic o->{match_all_hardware} name
- automatically install network drivers when matching all hardware

Version 10.4.122 - 29 March 2007, by Thierry Vignaud

- final banner image
- fix installing kernel-source-stripped
- include mmc_block for card readers

Version 10.4.120 - 23 March 2007, by Pascal "Pixel" Rigaux

- allow having name with "/" in media.cfg
- interactive::curses: 
  o handle multi-line labels, and wrap too long labels (#29060)
- do not use bold&big for advanced_messages
  (fixes authentication choice being big & ugly, #28676)

Version 10.4.119 - 22 March 2007, by Pascal "Pixel" Rigaux

- use concat_symlink to get rid of ../../ in urpmi.cfg on x86_64 for main32 medium
- don't complain about missing pata drivers
- do not install nspluginwrapper on ia32 (#29808)
- use http://api.mandriva.com/mirrors/$type.$version.$arch instead of simply
  $version.$arch (useful to differentiate CorpoDesktop4)