@@ -1,3 +1,5 @@
+- do not ask for updates at end of installation when updates are already
+  available (network installs) (#30344)
 - do not try to configure dvd devices since /dev is wiped out at reboot
 - allow umounting cdrom during a transaction
 - really allow having name with "/" in media.cfg
